add_executable (fibnacci_quad_recur fibnacci_quad_recur.cpp) 
target_link_libraries(fibnacci_quad_recur)

add_executable (fibnacci_linear_recur fibnacci_linear_recur.cpp) 
target_link_libraries(fibnacci_linear_recur)

add_executable (fibnacci_iter fibnacci_iter.cpp) 
target_link_libraries(fibnacci_iter)



